--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,12 @@
+*{
+  margin: 0;
+  padding: 0;
+}
+
 body {
   background: url(./img/background.jpg) no-repeat;
   background-size: cover;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .container {
@@ -9,6 +15,7 @@ body {
   width: 400px;
   margin-top: 70px;
   margin-left: 40px;
+  margin-bottom: 100px;
   border-radius: 7px;
   background-color: rgba(153, 153, 153, 0.2);
 }
@@ -18,12 +25,7 @@ form {
   position: relative;
 }
 
-.user {
-  height: 70px;
-  position: relative;
-}
-
-.passwd {
+.paswd {
   height: 70px;
   position: relative;
   top: 50px;
@@ -55,7 +57,7 @@ h1 {
 }
 
 input {
-  position: absoulute; */
+  position: absoulute; 
   top: 40px;
   margin-left: 30px;
   border: none;
